--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chrome-aws-lambda": "10.1.0",
+    "node-telegram-bot-api": "^0.60.0",
     "puppeteer-core": "10.1.0"
   },
   "devDependencies": {
