--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chrome-aws-lambda": "10.1.0",
-    "node-telegram-bot-api": "^0.60.0",
-    "puppeteer-core": "10.1.0"
+    "node-telegram-bot-api": "^0.60.0"
   },
   "devDependencies": {
     "puppeteer": "10.1.0",
+    "chrome-aws-lambda": "10.1.0",
+    "serverless-latest-layer-version": "^2.1.2",
     "serverless-offline": "^11.5.0"
   }
 }
